--- a/data/results/176-Manthai-East-Pradeshiya-Sabha.json
+++ b/data/results/176-Manthai-East-Pradeshiya-Sabha.json
@@ -2,6 +2,7 @@
   "district_name": "Mullaitivu",
   "lg_code": "176",
   "lg_name": "Manthai East Pradeshiya Sabha",
+  "url": "https://results.elections.gov.lk/?page=lg_result&district=MULLAITIVU&lg_code=176&lg_name=MANTHAI-EAST-PRADESHIYA-SABHA",
   "time_str": "2025-05-06 21:02:00",
   "time_ut": 1746545520.0,
   "summary_data": {
